--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,13 +1,20 @@
-<div class="container">
- <h2 class="title">Listado de usuarios</h2>
+<div class="user-wrapper">
+  <h2 class="title">Listado de usuarios</h2>
+    <div class="cards-grid">
+        <div *ngFor="let user of users; let i = index" class="card" [ngClass]="'bg-' + (i % 4)">
+            <div class="card-header">
+                <p class="rate">INFORMACIÓN DE USUARIO</p>
+                <button class="bookmark"></button>
+            </div>
 
- <div class="card-container">
-    <div class="user-card" *ngFor="let user of users">
-        <h3>{{user.name}}</h3>
-        <p><strong>Email:</strong>{{user.email}}</p>
-        <p><strong>Teléfono:</strong>{{user.phone}}</p>
-        <p><strong>Dirección:</strong>{{user.address.street}}, {{user.address.city}}</p>
-        <button (click)="showUserDetails(user.id)">Ver detalles en consola </button>
+            <h2 class="role">{{ user.name }}</h2>
+            <p class="email">{{ user.email }}</p>
+            <p class="phone">{{ user.phone }}</p>
+            <p class="city">{{user.address.city}}</p>
+
+            <div class="card-footer">
+                <button (click)="showUserDetails(user.id)">Ver detalles</button>
+            </div>
+        </div>
     </div>
- </div>
 </div>
