--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -1,42 +1,86 @@
-.container {
+.cards-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 1.5rem;
+  padding: 2rem;
+}
+
+.user-wrapper {
     padding: 2rem;
-    text-align: center;
+
+    .title {
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 1.5rem;
+        text-align: center;
+        color: #222;
+        font-family: 'Segoe UI', sans-serif;
+    }
 }
 
-.card-container {
+.card {
+  padding: 1.5rem;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease;
+  font-family: 'Segoe UI', sans-serif;
+
+  &:hover {
+    transform: translateY(-6px);
+  }
+
+  .card-header {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-}
+    justify-content: space-between;
+    align-items: center;
 
-.title {
-    margin-bottom: 1.5rem;
-    font-size: 2rem;
-    color: #333;
-}
+    .rate {
+      font-weight: bold;
+      font-size: 14px;
+    }
 
-.user-card {
-    background: #fff;
-    padding: 1rem;
-    border-radius: 10px;
-    width: 250px;
-    text-align:center;
-    box-shadow: 0 0 10px rgba(0, 0, 0,0.1);
-    transition: 0.3s ease;
-}
+    .bookmark {
+      background: none;
+      border: none;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  }
 
-.user-card:hover{
-    transform: translateY(-5px);
-}
+  .role {
+    font-size: 20px;
+    margin: 1rem 0 0.5rem;
+  }
 
-button {
-    margin-top: 10px;
-    background-color: #007bff ;
-    color: #fff;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 5px;
-    cursor: pointer;
+  .email,
+  .phone {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 0.25rem;
+  }
+
+  .card-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+
+    .company {
+      font-size: 13px;
+      color: #666;
+    }
+
+    button {
+      background: #903bff;
+      color: #fff;
+      border: none;
+      padding: 0.4rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+  }
 }
 
